gap-fixed

--- a/react-app/src/components/AlbumDetails/AlbumDetails.css
+++ b/react-app/src/components/AlbumDetails/AlbumDetails.css
@@ -8,7 +8,7 @@
 }
 .top-half {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(3, 1fr);
     /* column-gap: 10px; */
     padding-bottom: 20px;
     padding-left: 20px;
@@ -30,6 +30,7 @@
 
 .left {
     flex-basis: 10px;
+    /* align-self: start; */
 }
 
 .heart-container {
@@ -60,7 +61,7 @@
 
 .left {
     grid-column-start: 1;
-    grid-column-end: 2;
+    grid-column-end: 1;
     padding-bottom: 10px;
 }
 
@@ -72,7 +73,7 @@
 
 .center {
     grid-column-start: 2;
-    grid-column-end: 4;
+    grid-column-end: 2;
     justify-self: start;
     padding-left: 15px;
 }
@@ -80,6 +81,8 @@
 .right {
     align-self: center;
     padding-right: 10px;
+    grid-column-start: 3;
+    grid-column-end: 4;
 }
 
 .rating-container {
@@ -141,6 +144,12 @@
 
 
 @media screen and (max-width:900px) {
+
+    .page {
+        margin: auto;
+        padding-right: 5px;
+    }
+
     .likes {
         display: flex;
         font-size: 25px;
@@ -151,17 +160,25 @@
     .top-half {
         display: flex;
         justify-content: space-around;
+        align-content: center;
         flex-direction: column;
         flex-wrap: wrap;
         max-width: 100%;
 
     }
 
+    .center {
+        align-self: center;
+    }
     .right {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         align-items: center;
         gap: 5px;
+    }
+
+    .title, .artist, .release_date, .genre, .description {
+        text-align: center;
     }
 
     .rating-container {
